# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  C:\Users\mikko\ot-harjoitustyo\data\database.db  READ.md  README.md  pyproject.toml  pytest.ini  tasks.py  test.py
data/: database.db  database.sqlite
dokumentaatio/: arkkitehtuuri.md  kayttoohje  kayttoohje.md  testaus  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/poetry-testi/src/: index.py
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: game.py  game_repository.py  player.py  player_repository.py
src/repositories/: game_repository.py  player_repository.py
src/services/: play_service.py
src/tests/: conftest.py  game_test.py  player_test.py
src/tests/repositories/: game_repository_test.py  player_repository_test.py
src/tests/services/: play_service_test.py
src/ui/: game_ended_view.py  play_view.py  select_players_view.py  ui.py
